--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     "node": ">=4.0.0"
   },
   "dependencies": {
-    "confidence": "1.x.x",
-    "glue": "3.x.x",
-    "hapi": "12.x.x",
-    "hoek": "3.x.x"
+    "confidence": "3.0.2",
+    "glue": "4.0.0",
+    "hapi": "15.1.1",
+    "hoek": "4.1.0"
   },
   "devDependencies": {
-    "code": "2.x.x",
-    "lab": "8.x.x",
+    "code": "4.0.0",
+    "lab": "11.1.0",
     "nodemon": "1.x.x"
   }
 }
